Fix issues with nabber on mobile

--- a/_assets/stylesheets/modules/music-player.scss
+++ b/_assets/stylesheets/modules/music-player.scss
@@ -8,8 +8,6 @@
 }
 
 .navbar-music {
-  position: relative;
-
   > li > a {
     min-width: 50px;
     text-align: center;
@@ -18,14 +16,16 @@
   @media (max-width: $screen-xs-max) {
     margin: 0;
     padding-top: 5px;
-    // margin-left: 0;
-    // margin-right: 0;
-    // padding-bottom: 10px;
+    padding-bottom: 5px;
 
     > li {
       display: table-cell;
       width: 1%;
     }
+  }
+
+  @media (min-width: $screen-sm-min) {
+    position: relative;
   }
 }
 
@@ -37,7 +37,6 @@
   bottom: 0;
   width: 100%;
   height: 5px;
-  // margin: -4px 0 -1px;
   background: #ddd;
 }
 
